--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,75 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100004146368712%22%3A%22GDSUP4Zy%22%2C%22100004574085559%22%3A%2271csA1VI%22%2C%22100003046658664%22%3A%22TMt0xL8Y%22%2C%22100004955718671%22%3A%22G28IRj3J%22%2C%2261586207258118%22%3A%22oudaNaEi%22%2C%22100004283197641%22%3A%22FSnEvBGt%22%2C%2261586089544444%22%3A%22jmijIy6n%22%2C%2261577393221046%22%3A%22rW7Ai5ks%22%2C%2261577333014737%22%3A%227LuEfYRu%22%2C%2261577626406714%22%3A%22xGg01knI%22%7D",
+        "value": "%7B%2261586270473044%22%3A%22rOYvN1ur%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
+        "creation": "2026-02-23T16:32:11.378Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
     },
     {
-        "key": "sb",
-        "value": "_sU-aTQdC_Le3BOYS9V9kDgW",
+        "key": "vpd",
+        "value": "v1%3B760x393x2.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
+    },
+    {
+        "key": "datr",
+        "value": "B3uaaU3O9KE4eZ4yja4RUKbl",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
+    },
+    {
+        "key": "sb",
+        "value": "B3uaaS4HrpPjydusevtg2TQC",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61586270473044",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
+    },
+    {
+        "key": "xs",
+        "value": "7%3AZpkTGOjscHgD7A%3A2%3A1771731730%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
+    },
+    {
+        "key": "pas",
+        "value": "61586270473044%3AuT0Hjtz9xL",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
     },
     {
         "key": "ps_n",
@@ -32,106 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B688x360x2.5506443977355957",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61577626406714",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "xs",
-        "value": "2%3Ail9vCIotca88dg%3A2%3A1771778619%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "dpr",
-        "value": "2.804298162460327",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "wd",
-        "value": "1048x2003",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "pas",
-        "value": "100004283197641%3AXiilWdC5aZ%2C61577632893256%3AGMMVnfu87r%2C100004146368712%3ANcrS6adFZi%2C100004955718671%3A4VFnZwpLcJ%2C100004574085559%3Az27lw1wSlp%2C100003046658664%3AWHwSqH1FTR%2C61586157565500%3AOOovHmUvk8%2C61586207258118%3ArIJximxUQc%2C61586089544444%3AUVlhcAZmY3%2C61577393221046%3ApeolweoBS9%2C61577333014737%3AXvKM09dZG1%2C61577626406714%3AXp5wZbzdgn",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
-    },
-    {
-        "key": "datr",
-        "value": "UZebaR46yZZmzMxp_CZF1b6T",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
     },
     {
         "key": "fr",
-        "value": "07dzvLtgBztEdRD5E.AWeFIN5lhSREDrbjRxr4FDQBYo9wEC2LWI2BCkB3RphyUla_lwI.Bpmy0_..AAA.0.0.Bpm-7H.AWdeFlI7xObu_zBZXxBXM-Zxb7c",
+        "value": "0zacC6bRpEJGNuibs.AWcXYWI5n6l9hzFjvOXvx4ZeshqRQ2VLHMEOgtp_AFM3-9dNewo.BpmQAL..AAA.0.0.BpnF9C.AWcVMjkxsKi12JTUj6AFhlJXxyQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
     },
     {
         "key": "fbl_st",
-        "value": "101231210%3BT%3A29530448",
+        "value": "101339980%3BT%3A29530928",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3096%3Btimestamp%3A1771826887",
+        "value": "v2%3Bclient_version%3A3096%3Btimestamp%3A1771855682",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-23T06:08:12.643Z",
-        "lastAccessed": "2026-02-23T06:08:12.643Z"
+        "creation": "2026-02-23T16:32:11.380Z",
+        "lastAccessed": "2026-02-23T16:32:11.380Z"
     }
 ]
